--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -1527,7 +1527,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="53"/>
                                 <state key="normal" image="search-user"/>
                                 <connections>
-                                    <segue destination="ar5-gT-Bfa" kind="show" identifier="ChannelToFindUser" id="nxE-bO-Cuj"/>
+                                    <segue destination="ar5-gT-Bfa" kind="show" identifier="ChannelToFindUser" id="7Mz-9t-xbD"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="73C-21-Ziz">
@@ -1697,6 +1697,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EJu-dt-kb8"/>
                     </view>
+                    <connections>
+                        <outlet property="notification" destination="4c6-ND-vH4" id="ccJ-L8-Ica"/>
+                        <outlet property="tableView" destination="i3o-0L-BTn" id="30g-XD-wNl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vvO-2u-lDq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
