--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -1527,7 +1527,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="53"/>
                                 <state key="normal" image="search-user"/>
                                 <connections>
-                                    <segue destination="ar5-gT-Bfa" kind="show" identifier="ChannelToFindUser" id="7Mz-9t-xbD"/>
+                                    <action selector="searchBtnPressed:" destination="9En-XN-fdr" eventType="touchUpInside" id="AYw-qS-cdX"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="73C-21-Ziz">
@@ -1616,11 +1616,12 @@
                     <connections>
                         <outlet property="notification" destination="nDI-KF-0LS" id="vAl-BX-Jr3"/>
                         <outlet property="tableView" destination="73C-21-Ziz" id="wMg-ig-pqK"/>
+                        <segue destination="ar5-gT-Bfa" kind="show" identifier="ChannelToFindUser" id="ese-HZ-mVZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2yg-BL-zxn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2907.2463768115945" y="2457.5892857142858"/>
+            <point key="canvasLocation" x="-2904" y="2452"/>
         </scene>
         <!--Find User Controller-->
         <scene sceneID="rdT-dN-P5R">
