--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -319,7 +319,7 @@
                 <viewControllerPlaceholder storyboardName="DetailFood" referencedIdentifier="DetailFoodStoryboardID" id="7q1-Xn-wef" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MNA-ce-vHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3102.898550724638" y="2207.8125"/>
+            <point key="canvasLocation" x="1300" y="2115"/>
         </scene>
         <!--LoginLogoutStoryboardID-->
         <scene sceneID="1SL-bZ-tAl">
@@ -327,7 +327,7 @@
                 <viewControllerPlaceholder storyboardName="LogInAndLogOut" referencedIdentifier="LoginLogoutStoryboardID" id="zxw-JI-5Xv" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Grh-Wk-v9I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3030.434782608696" y="2420.7589285714284"/>
+            <point key="canvasLocation" x="1261" y="2334"/>
         </scene>
         <!--AccountDetailStoryboardID-->
         <scene sceneID="kZW-uL-rBr">
@@ -1090,6 +1090,15 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKC-yg-dK7">
+                                <rect key="frame" x="0.0" y="423" width="414" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="1wc-Oj-W6q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -1098,13 +1107,17 @@
                             <constraint firstItem="A6y-8Q-9c9" firstAttribute="top" secondItem="i7j-I2-eJU" secondAttribute="bottom" id="6ru-8G-zpG"/>
                             <constraint firstItem="i7j-I2-eJU" firstAttribute="top" secondItem="J0s-cd-76b" secondAttribute="bottom" constant="10" id="9dA-rx-59f"/>
                             <constraint firstItem="A6y-8Q-9c9" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="AYe-bP-IjX"/>
+                            <constraint firstItem="WKC-yg-dK7" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="CVI-6Z-LVM"/>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="GGR-W1-ugW"/>
                             <constraint firstItem="xaf-RH-A4k" firstAttribute="top" secondItem="H1F-YX-6Rj" secondAttribute="top" id="GpH-iG-u2Y"/>
+                            <constraint firstItem="WKC-yg-dK7" firstAttribute="centerY" secondItem="yKN-VE-2fJ" secondAttribute="centerY" id="Jk1-ds-PaI"/>
                             <constraint firstItem="AtK-ma-OmQ" firstAttribute="width" secondItem="yKN-VE-2fJ" secondAttribute="width" id="QiO-OK-GFX"/>
                             <constraint firstItem="J0s-cd-76b" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="RPI-XY-Rp4"/>
                             <constraint firstItem="J0s-cd-76b" firstAttribute="centerY" secondItem="xaf-RH-A4k" secondAttribute="centerY" id="RRS-Vd-8So"/>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="width" secondItem="yKN-VE-2fJ" secondAttribute="width" id="YH2-h6-nRL"/>
+                            <constraint firstItem="WKC-yg-dK7" firstAttribute="trailing" secondItem="H1F-YX-6Rj" secondAttribute="trailing" id="jQi-Fk-6UX"/>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="top" secondItem="AtK-ma-OmQ" secondAttribute="bottom" constant="10" id="kb8-q6-vph"/>
+                            <constraint firstItem="WKC-yg-dK7" firstAttribute="leading" secondItem="H1F-YX-6Rj" secondAttribute="leading" id="opL-mr-ouy"/>
                             <constraint firstItem="AtK-ma-OmQ" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="pd3-lV-1EA"/>
                             <constraint firstItem="i7j-I2-eJU" firstAttribute="trailing" secondItem="H1F-YX-6Rj" secondAttribute="trailing" constant="-20" id="uWH-X9-WRK"/>
                             <constraint firstItem="i7j-I2-eJU" firstAttribute="leading" secondItem="H1F-YX-6Rj" secondAttribute="leading" constant="20" id="vWi-wJ-oFR"/>
@@ -1119,6 +1132,7 @@
                         <outlet property="accountBtn" destination="AGA-4S-Ldq" id="eDB-i4-3gT"/>
                         <outlet property="activitiesBtn" destination="zpj-wQ-YbV" id="rCv-id-A8Y"/>
                         <outlet property="inforUser" destination="A6y-8Q-9c9" id="52B-Wf-ces"/>
+                        <outlet property="notification" destination="WKC-yg-dK7" id="YYm-0E-fQw"/>
                         <outlet property="tableView" destination="Py4-Aq-2Dg" id="Ubn-u5-K7a"/>
                         <outlet property="userAvatar" destination="J0s-cd-76b" id="I6C-mP-O9h"/>
                         <outlet property="username" destination="i7j-I2-eJU" id="rzu-mL-u5U"/>
@@ -1126,6 +1140,7 @@
                         <segue destination="Hor-Rr-AA6" kind="show" identifier="AccountToPassword" id="k5x-uK-kas"/>
                         <segue destination="Fu9-kg-UPj" kind="show" identifier="AccountToEditInfor" id="PgS-Jk-3Ew"/>
                         <segue destination="KhO-Z4-gOn" kind="show" identifier="AccountToFeedback" id="Zwz-lU-fLG"/>
+                        <segue destination="Wu6-Q1-8b1" kind="show" identifier="AccountToLogin" id="Jkj-uA-TYM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lpk-he-fh5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1392,13 +1407,21 @@
             </objects>
             <point key="canvasLocation" x="416" y="3876"/>
         </scene>
+        <!--LoginLogoutStoryboardID-->
+        <scene sceneID="0Cx-9C-gmM">
+            <objects>
+                <viewControllerPlaceholder storyboardName="LogInAndLogOut" referencedIdentifier="LoginLogoutStoryboardID" id="Wu6-Q1-8b1" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iwj-tD-ocG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="253" y="2758"/>
+        </scene>
         <!--CommentStoryboardID-->
         <scene sceneID="bWA-U7-Iz0">
             <objects>
                 <viewControllerPlaceholder storyboardName="Comment" referencedIdentifier="CommentStoryboardID" id="Hhs-xT-Xtj" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xPv-Zd-KoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2181.1594202898555" y="2625.6696428571427"/>
+            <point key="canvasLocation" x="972" y="2758"/>
         </scene>
         <!--Change Password Controller-->
         <scene sceneID="Jg9-CS-pm8">
@@ -1513,7 +1536,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aAz-pQ-tcl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="SEN-JW-qCC" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2356.521739130435" y="3023.4375"/>
+            <point key="canvasLocation" x="1096" y="3129"/>
         </scene>
         <!--Chats-->
         <scene sceneID="CKf-jU-NcR">
