--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -1099,26 +1099,38 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S1r-pI-hUe">
+                                <rect key="frame" x="177" y="158" width="60" height="60"/>
+                                <connections>
+                                    <action selector="avatarBtnPressed:" destination="cUB-LF-Hav" eventType="touchUpInside" id="iv9-T9-gLU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="bottom" secondItem="H1F-YX-6Rj" secondAttribute="bottom" id="0c8-RB-VdN"/>
+                            <constraint firstItem="S1r-pI-hUe" firstAttribute="width" secondItem="J0s-cd-76b" secondAttribute="width" id="1ND-OQ-L7N"/>
                             <constraint firstItem="AtK-ma-OmQ" firstAttribute="top" secondItem="xaf-RH-A4k" secondAttribute="bottom" id="6eb-Yy-0Fz"/>
                             <constraint firstItem="A6y-8Q-9c9" firstAttribute="top" secondItem="i7j-I2-eJU" secondAttribute="bottom" id="6ru-8G-zpG"/>
                             <constraint firstItem="i7j-I2-eJU" firstAttribute="top" secondItem="J0s-cd-76b" secondAttribute="bottom" constant="10" id="9dA-rx-59f"/>
                             <constraint firstItem="A6y-8Q-9c9" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="AYe-bP-IjX"/>
                             <constraint firstItem="WKC-yg-dK7" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="CVI-6Z-LVM"/>
+                            <constraint firstItem="S1r-pI-hUe" firstAttribute="height" secondItem="J0s-cd-76b" secondAttribute="height" id="Cvl-0R-SSN"/>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="GGR-W1-ugW"/>
                             <constraint firstItem="xaf-RH-A4k" firstAttribute="top" secondItem="H1F-YX-6Rj" secondAttribute="top" id="GpH-iG-u2Y"/>
                             <constraint firstItem="WKC-yg-dK7" firstAttribute="centerY" secondItem="yKN-VE-2fJ" secondAttribute="centerY" id="Jk1-ds-PaI"/>
+                            <constraint firstItem="S1r-pI-hUe" firstAttribute="top" secondItem="J0s-cd-76b" secondAttribute="top" id="Q9Q-Os-Nd8"/>
                             <constraint firstItem="AtK-ma-OmQ" firstAttribute="width" secondItem="yKN-VE-2fJ" secondAttribute="width" id="QiO-OK-GFX"/>
                             <constraint firstItem="J0s-cd-76b" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="RPI-XY-Rp4"/>
                             <constraint firstItem="J0s-cd-76b" firstAttribute="centerY" secondItem="xaf-RH-A4k" secondAttribute="centerY" id="RRS-Vd-8So"/>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="width" secondItem="yKN-VE-2fJ" secondAttribute="width" id="YH2-h6-nRL"/>
                             <constraint firstItem="WKC-yg-dK7" firstAttribute="trailing" secondItem="H1F-YX-6Rj" secondAttribute="trailing" id="jQi-Fk-6UX"/>
+                            <constraint firstItem="S1r-pI-hUe" firstAttribute="trailing" secondItem="J0s-cd-76b" secondAttribute="trailing" id="jkB-0h-FE1"/>
                             <constraint firstItem="Py4-Aq-2Dg" firstAttribute="top" secondItem="AtK-ma-OmQ" secondAttribute="bottom" constant="10" id="kb8-q6-vph"/>
                             <constraint firstItem="WKC-yg-dK7" firstAttribute="leading" secondItem="H1F-YX-6Rj" secondAttribute="leading" id="opL-mr-ouy"/>
                             <constraint firstItem="AtK-ma-OmQ" firstAttribute="centerX" secondItem="yKN-VE-2fJ" secondAttribute="centerX" id="pd3-lV-1EA"/>
+                            <constraint firstItem="S1r-pI-hUe" firstAttribute="bottom" secondItem="J0s-cd-76b" secondAttribute="bottom" id="qpy-Mw-6qC"/>
+                            <constraint firstItem="S1r-pI-hUe" firstAttribute="leading" secondItem="J0s-cd-76b" secondAttribute="leading" id="sW5-4h-eOx"/>
                             <constraint firstItem="i7j-I2-eJU" firstAttribute="trailing" secondItem="H1F-YX-6Rj" secondAttribute="trailing" constant="-20" id="uWH-X9-WRK"/>
                             <constraint firstItem="i7j-I2-eJU" firstAttribute="leading" secondItem="H1F-YX-6Rj" secondAttribute="leading" constant="20" id="vWi-wJ-oFR"/>
                             <constraint firstItem="H1F-YX-6Rj" firstAttribute="trailing" secondItem="xaf-RH-A4k" secondAttribute="trailing" id="yQG-so-yo1"/>
@@ -1784,7 +1796,7 @@
         <image name="store" width="29" height="29"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Kqp-az-Zl9"/>
+        <segue reference="LAx-na-B30"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
