delete old chat

--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -709,7 +709,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="tT0-jy-YF6">
                                                     <rect key="frame" x="10" y="10" width="404" height="79.666666666666671"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RRt-Jl-ASr" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RRt-Jl-ASr" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="60" height="79.666666666666671"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="60" id="3GG-1l-fqE"/>
